contacts mobile styles added

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,104 +1,116 @@
 <!-- CONTACTS -->
 <section class="contacts" id="contacts">
-  <div class="container">
-    <h2>Contacts</h2>
-    <ul class="list">
-      <li>
-        <p>cafe</p>
-        <div>
-          <p>Chicago</p>
-          <address>10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</address>
+  <div class="container contacts__container">
+    <h2 class="visually-hidden">Contacts</h2>
+    <ul class="list contacts__list">
+      <li class="contacts__item">
+        <p class="contacts__title">cafe</p>
+        <div class="contacts__address-wrap">
+          <p class="contacts__city">Chicago</p>
+          <address class="contacts__address">
+            10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA
+          </address>
         </div>
-        <div>
-          <ul class="list">
-            <li>
-              <p>Monday - Friday</p>
-              <p>06:00 AM - 10:00 PM</p>
-            </li>
-            <li>
-              <p>Saturday - Sunday</p>
-              <p>08:00 AM - 16:00 PM</p>
-            </li>
-          </ul>
-        </div>
-        <div>
-          <ul class="list">
-            <li>
-              <a href="tel:+61038366284" class="link">+61(0) 383 766 284</a>
-            </li>
-            <li>
-              <a href="mailto:noreply@envato.com" class="link"
-                >noreply@envato.com</a
-              >
-            </li>
-          </ul>
-        </div>
+
+        <ul class="list contacts__working-time">
+          <li class="contacts__working-time-item">
+            <p class="contacts__working-days">Monday - Friday</p>
+            <p class="contacts__working-hours">06:00 AM - 10:00 PM</p>
+          </li>
+          <li class="contacts__working-time-item">
+            <p class="contacts__working-days">Saturday - Sunday</p>
+            <p class="contacts__working-hours">08:00 AM - 16:00 PM</p>
+          </li>
+        </ul>
+
+        <ul class="list contacts__contacts-list">
+          <li class="contacts__contacts-item">
+            <a href="tel:+61038366284" class="link contacts__contacts-link"
+              >+61(0) 383 766 284</a
+            >
+          </li>
+          <li class="contacts__contacts-item">
+            <a
+              href="mailto:noreply@envato.com"
+              class="link contacts__contacts-link"
+              >noreply@envato.com</a
+            >
+          </li>
+        </ul>
       </li>
-      <li>
-        <p>food truck</p>
-        <div>
-          <p>Los Angeles</p>
-          <address>1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</address>
+      <li class="contacts__item">
+        <p class="contacts__title">food truck</p>
+        <div class="contacts__address-wrap">
+          <p class="contacts__city">Los Angeles</p>
+          <address class="contacts__address">
+            1003 Manhattan Ave, Manhattan Beach, CA 90263, USA
+          </address>
         </div>
-        <div>
-          <ul class="list">
-            <li>
-              <p>Monday - Friday</p>
-              <p>06:00 AM - 10:00 PM</p>
-            </li>
-            <li>
-              <p>Saturday - Sunday</p>
-              <p>08:00 AM - 16:00 PM</p>
-            </li>
-          </ul>
-        </div>
-        <div>
-          <ul class="list">
-            <li>
-              <a href="tel:+61038366284" class="link">+61(0) 383 766 284</a>
-            </li>
-            <li>
-              <a href="mailto:noreply@envato.com" class="link"
-                >noreply@envato.com</a
-              >
-            </li>
-          </ul>
-        </div>
+
+        <ul class="list contacts__working-time">
+          <li class="contacts__working-time-item">
+            <p class="contacts__working-days">Monday - Friday</p>
+            <p class="contacts__working-hours">06:00 AM - 10:00 PM</p>
+          </li>
+          <li class="contacts__working-time-item">
+            <p class="contacts__working-days">Saturday - Sunday</p>
+            <p class="contacts__working-hours">08:00 AM - 16:00 PM</p>
+          </li>
+        </ul>
+
+        <ul class="list contacts__contacts-list">
+          <li class="contacts__contacts-item">
+            <a href="tel:+61038366284" class="link contacts__contacts-link"
+              >+61(0) 383 766 284</a
+            >
+          </li>
+          <li class="contacts__contacts-item">
+            <a
+              href="mailto:noreply@envato.com"
+              class="link contacts__contacts-link"
+              >noreply@envato.com</a
+            >
+          </li>
+        </ul>
       </li>
-      <li>
-        <p>cafe</p>
-        <div>
-          <p>New York</p>
-          <address>726 Sterling Pl, Brooklyn, NY 11222, USA</address>
+      <li class="contacts__item">
+        <p class="contacts__title">cafe</p>
+        <div class="contacts__address-wrap">
+          <p class="contacts__city">New York</p>
+          <address class="contacts__address">
+            726 Sterling Pl, Brooklyn, NY 11222, USA
+          </address>
         </div>
-        <div>
-          <ul class="list">
-            <li>
-              <p>Monday - Friday</p>
-              <p>06:00 AM - 10:00 PM</p>
-            </li>
-            <li>
-              <p>Saturday - Sunday</p>
-              <p>08:00 AM - 16:00 PM</p>
-            </li>
-          </ul>
-        </div>
-        <div>
-          <ul class="list">
-            <li>
-              <a href="tel:+61038366284" class="link">+61(0) 383 766 284</a>
-            </li>
-            <li>
-              <a href="mailto:noreply@envato.com" class="link"
-                >noreply@envato.com</a
-              >
-            </li>
-          </ul>
-        </div>
+
+        <ul class="list contacts__working-time">
+          <li class="contacts__working-time-item">
+            <p class="contacts__working-days">Monday - Friday</p>
+            <p class="contacts__working-hours">06:00 AM - 10:00 PM</p>
+          </li>
+          <li class="contacts__working-time-item">
+            <p class="contacts__working-days">Saturday - Sunday</p>
+            <p class="contacts__working-hours">08:00 AM - 16:00 PM</p>
+          </li>
+        </ul>
+
+        <ul class="list contacts__contacts-list">
+          <li class="contacts__contacts-item">
+            <a href="tel:+61038366284" class="link contacts__contacts-link"
+              >+61(0) 383 766 284</a
+            >
+          </li>
+          <li class="contacts__contacts-item">
+            <a
+              href="mailto:noreply@envato.com"
+              class="link contacts__contacts-link"
+              >noreply@envato.com</a
+            >
+          </li>
+        </ul>
       </li>
     </ul>
-    <ul class="list">
-      <li>
+    <ul class="list contacts__button-list">
+      <li class="contacts__button-item">
         <button class="btn btn-locations" type="button">
           Our Locations
           <svg class="btn-locations__icon" width="12" height="12">
@@ -106,7 +118,7 @@
           </svg>
         </button>
       </li>
-      <li>
+      <li class="contacts__button-item">
         <button class="btn btn-franchise" type="button">
           Franchise
           <svg class="btn-locations__icon" width="12" height="12">
