--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -21,6 +21,7 @@ $mainBgColor: #84a178;
 $secondaryBgColor: #fcfcfc;
 
 // Border colors
+$contactsBorderColor: #e1e1e1;
 
 // Breakpoints
 $minMobile: 480px;
