--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1462,6 +1462,103 @@ footer {
   }
 }
 
+/* === CONTACTS === */
+.contacts {
+  background: linear-gradient(to bottom, transparent 353px, 0%, #84a178 1095px);
+}
+.contacts__container {
+  padding-bottom: 60px;
+}
+.contacts__list {
+  margin-bottom: 20px;
+}
+.contacts__item {
+  margin: 0 auto;
+  padding: 40px 32px 24px;
+  width: 280px;
+  border-radius: 24px;
+  text-align: left;
+  background-color: #fcfcfc;
+  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+}
+.contacts__item:not(:last-child) {
+  margin-bottom: 16px;
+}
+.contacts__title {
+  margin-bottom: 20px;
+  padding: 4px 22px;
+  display: inline-block;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.1666666667;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  border-radius: 4px;
+  color: #131313;
+  background-color: #f8d24e;
+}
+.contacts__address-wrap {
+  margin-bottom: 24px;
+}
+.contacts__city {
+  margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.8333333333;
+  letter-spacing: 0.04em;
+  color: #131313;
+}
+.contacts__address {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.8333333333;
+  letter-spacing: 0.04em;
+  color: #d6936d;
+}
+.contacts__working-time {
+  margin-bottom: 24px;
+  padding-top: 24px;
+  border-top: 1px solid #e1e1e1;
+}
+.contacts__working-time-item:not(:last-child) {
+  margin-bottom: 8px;
+}
+.contacts__working-days {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.8333333333;
+  color: #131313;
+}
+.contacts__working-hours {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.8333333333;
+  color: #ababab;
+}
+.contacts__contacts-list {
+  padding-top: 24px;
+  border-top: 1px solid #e1e1e1;
+}
+.contacts__contacts-item:not(:last-child) {
+  margin-bottom: 6px;
+}
+.contacts__contacts-link {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.5833333333;
+  color: #131313;
+}
+.contacts__button-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contacts__button-item:not(:last-child) {
+  margin-bottom: 16px;
+}
+
 /* === FOOTER ==== */
 .footer-upper-container {
   padding: 0 20px 40px;
