footer styles changed BEM

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -14,40 +14,40 @@
   <div class="footer__contacts-wrap">
     <!-- Social links -->
 
-    <ul class="list social-contacts__list">
-      <li class="social-contacts__item">
+    <ul class="list footer__sl-list">
+      <li class="footer__sl-item">
         <a
-          class="link social-link"
+          class="link footer__sl"
           target="_blank"
           rel="noopener nofollow noreferrer"
           href="https://github.com/"
         >
-          <svg class="social-link-icon" width="20" height="20">
-            <use href="./images/icons/social-links.svg#icon-github"></use>
+          <svg class="footer__sl-icon" width="20" height="20">
+            <use href="./images/icons/svg-icons.svg#icon-github"></use>
           </svg>
         </a>
       </li>
-      <li class="social-contacts__item">
+      <li class="footer__sl-item">
         <a
-          class="link social-link"
+          class="link footer__sl"
           target="_blank"
           rel="noopener nofollow noreferrer"
           href="https://web.telegram.org/"
         >
-          <svg class="social-link-icon" width="20.4" height="15.87">
-            <use href="./images/icons/social-links.svg#icon-telegram"></use>
+          <svg class="footer__sl-icon" width="20.4" height="15.87">
+            <use href="./images/icons/svg-icons.svg#icon-telegram"></use>
           </svg>
         </a>
       </li>
-      <li class="social-contacts__item">
+      <li class="footer__sl-item">
         <a
-          class="link social-link"
+          class="link footer__sl"
           target="_blank"
           rel="noopener nofollow noreferrer"
           href="https://www.facebook.com/"
         >
-          <svg class="social-link-icon" width="9.35" height="20.4">
-            <use href="./images/icons/social-links.svg#icon-facebook"></use>
+          <svg class="footer__sl-icon" width="9.35" height="20.4">
+            <use href="./images/icons/svg-icons.svg#icon-facebook"></use>
           </svg>
         </a>
       </li>
