--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,11 +1,25 @@
 /* === FOOTER ==== */
 
+footer {
+  background-color: $mainBgColor;
+}
+
 .footer {
+  // Upper container
+
   &-upper-container {
     padding: 0 20px 40px;
 
-    @include only-tablet {
+    @include less-then-tablet {
+      width: 320px;
+    }
+
+    @include tablet-and-desktop {
       padding: 0 32px 32px 33px;
+
+      display: flex;
+      justify-content: space-between;
+      align-items: stretch;
     }
 
     @include only-desktop {
@@ -19,6 +33,8 @@
     }
   }
 
+  // Lower container
+
   &-lower-container {
     padding: 20px;
 
@@ -27,7 +43,7 @@
     justify-content: center;
     align-items: center;
 
-    border-top: 1px solid #e1e1e1;
+    border-top: 1px solid $contactsBorderColor;
 
     @include only-tablet {
       padding: 12px 20px 12px 42px;
@@ -43,6 +59,8 @@
       flex-direction: row;
     }
   }
+
+  // Text
 
   &__title-wrap {
     margin-bottom: 60px;
@@ -116,6 +134,8 @@
     }
   }
 
+  // Contacts
+
   &__contacts-wrap {
     display: flex;
     flex-direction: column;
@@ -182,6 +202,55 @@
     }
   }
 
+  // Social links
+
+  &__sl-list {
+    margin-bottom: 20px;
+
+    display: flex;
+    justify-content: flex-end;
+
+    @include only-tablet {
+      margin-bottom: 34px;
+    }
+
+    @include only-desktop {
+      margin-bottom: 40px;
+    }
+  }
+
+  &__sl-item:not(:last-child) {
+    margin-right: 20px;
+
+    @include tablet-and-desktop {
+      margin-right: 30px;
+    }
+  }
+
+  &__sl {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+
+    background-color: $mainAccentColor;
+
+    &-icon {
+      fill: $mainBgColor;
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &:hover &-icon,
+    &:focus &-icon {
+      fill: $mainColor;
+    }
+  }
+
+  // Rights
+
   &__rights {
     font-weight: 700;
     font-size: 14px;
@@ -208,52 +277,5 @@
         margin-right: 4px;
       }
     }
-  }
-}
-
-.social-contacts {
-  &__list {
-    margin-bottom: 20px;
-
-    display: flex;
-    justify-content: flex-end;
-
-    @include only-tablet {
-      margin-bottom: 34px;
-    }
-
-    @include only-desktop {
-      margin-bottom: 40px;
-    }
-  }
-
-  &__item:not(:last-child) {
-    margin-right: 20px;
-
-    @include tablet-and-desktop {
-      margin-right: 30px;
-    }
-  }
-}
-
-.social-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  width: 34px;
-  height: 34px;
-  border-radius: 50%;
-
-  background-color: $mainAccentColor;
-
-  &-icon {
-    fill: $mainBgColor;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  &:hover &-icon,
-  &:focus &-icon {
-    fill: $mainColor;
   }
 }
