mobile menu added #1

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,7 +36,11 @@
   </nav>
   <div class="header__button-wrap">
     <!-- Mobile menu open button -->
-    <button class="btn mobile-menu-open">
+    <button
+      class="btn mobile-menu-open js-open-menu"
+      aria-expanded="false"
+      aria-controls="mobile-menu"
+    >
       <svg class="mobile-menu-open__icon" width="32" height="32">
         <use href="./images/icons/svg-icons.svg#icon-burger"></use>
       </svg>
