--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -93,3 +93,9 @@
   justify-content: center;
   align-items: center;
 }
+
+// Transition by hover and focus
+
+@mixin my-transition($property) {
+  transition: $property 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
