--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,9 +3,9 @@
   <!-- Page navigation -->
   <nav class="header__nav">
     <!-- Logo -->
-    <a href="" class="link header__logo">
+    <a href="" class="link logo header__logo">
       <img
-        class="header__logo-img"
+        class="logo-img header__logo-img"
         srcset="
           ./images/logo/logo-mobile-40-37.png  40w,
           ./images/logo/logo-tablet-48-44.png  48w,
