--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -15,9 +15,9 @@
     </svg>
   </button>
   <!-- Logo -->
-  <a href="" class="link header__logo mobile-menu__logo">
+  <a href="" class="link logo mobile-menu__logo">
     <img
-      class="header__logo-img"
+      class="logo-img mobile-menu__logo-img"
       srcset="
         ./images/logo/logo-mobile-40-37.png  40w,
         ./images/logo/logo-tablet-48-44.png  48w,
