--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -30,25 +30,25 @@
     align-items: center;
   }
 
-  &__logo {
-    width: 40px;
-    height: 37px;
+  // &__logo {
+  //   width: 40px;
+  //   height: 37px;
 
-    @include only-tablet {
-      width: 48px;
-      height: 44px;
-    }
+  //   @include only-tablet {
+  //     width: 48px;
+  //     height: 44px;
+  //   }
 
-    @include only-desktop {
-      width: 60px;
-      height: 65px;
-    }
-  }
+  //   @include only-desktop {
+  //     width: 60px;
+  //     height: 65px;
+  //   }
+  // }
 
-  &__logo-img {
-    width: 100%;
-    height: 100%;
-  }
+  // &__logo-img {
+  //   width: 100%;
+  //   height: 100%;
+  // }
 
   &__menu {
     display: flex;
