--- a/src/sass/layout/_mobile-menu.scss
+++ b/src/sass/layout/_mobile-menu.scss
@@ -1,30 +1,30 @@
 /* === MOBILE MENU ===*/
 
 .menu-container {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
 
   display: flex;
   flex-direction: column;
   align-items: center;
 
   padding: 12px 31px 64px 32px;
-  width: 320px;
+  width: 100vw;
   height: 100vh;
 
   background-color: $mainBgColor;
-  outline: 1px solid crimson;
 
-  //   transform: translateX(-320px);
+  transform: translateX(-100%);
   @include my-transition(transform);
 
-  // &.is-open {
-  //     transform: translateX(0);
-  // }
+  &.is-open {
+    transform: translateX(0);
+  }
 
   @include only-tablet {
     padding: 20px 32px;
-    width: 100vw;
-    height: 100vh;
   }
 }
 
@@ -92,5 +92,8 @@
   }
 
   &__buy-now {
+    @include only-tablet {
+      display: none;
+    }
   }
 }
